--- a/src/components/banner.css
+++ b/src/components/banner.css
@@ -92,7 +92,7 @@ background-position: 0 0;
   padding: 0px 10px;
  background-color: white;
  border: none;
- font-weight: 600;
+ /*font-weight: 600;*/
  margin-top: 10px;
  margin-bottom: 20px;
 }
